Plantio Diário: remover Talhão, adicionar campos do boletim (chuva, GPS, cobrição, OXIFERTIL); Enter navegação

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -371,6 +371,14 @@
                         <label for="plantio-obs">Observações</label>
                         <input type="text" id="plantio-obs" placeholder="Opcional">
                     </div>
+                    <div class="form-group">
+                        <label for="chuva-mm">Chuva (mm)</label>
+                        <input type="number" id="chuva-mm" step="0.1">
+                    </div>
+                    <div class="form-group">
+                        <label for="plantio-gps">GPS</label>
+                        <input type="checkbox" id="plantio-gps">
+                    </div>
                 </div>
             </div>
 
@@ -394,10 +402,7 @@
                         <label for="single-cod">Código</label>
                         <input type="number" id="single-cod" step="1">
                     </div>
-                    <div class="form-group">
-                        <label for="single-talhao">Talhão</label>
-                        <input type="text" id="single-talhao">
-                    </div>
+                    
                     <div class="form-group">
                         <label for="single-variedade">Variedade</label>
                         <input type="text" id="single-variedade">
@@ -413,6 +418,18 @@
                     <div class="form-group">
                         <label for="single-muda">Muda (ton)</label>
                         <input type="number" id="single-muda" step="0.01">
+                    </div>
+                    <div class="form-group">
+                        <label for="cobricao-dia">Cobrição (dia)</label>
+                        <input type="number" id="cobricao-dia" step="0.01">
+                    </div>
+                    <div class="form-group">
+                        <label for="cobricao-acumulada">Cobrição (acumulada)</label>
+                        <input type="number" id="cobricao-acumulada" step="0.01">
+                    </div>
+                    <div class="form-group">
+                        <label for="oxifertil-dose">OXIFERTIL Dose</label>
+                        <input type="number" id="oxifertil-dose" step="0.01">
                     </div>
                 </div>
             </div>
